# NT118-Store

./: .gitignore  App.tsx  README.md  demo.tar  package-lock.json  package.json  start-app.ps1  start-dev.ps1
.github/workflows/: ci.yml  node.js.yml
Lab/Lab01/: App.tsx  CustomUI.tsx  Task1.tsx  Task4.tsx  package-lock.json
Lab01/: App.tsx  Task2.tsx  Task3.tsx
NT118-Store/: README.md
Project/: README.md  package-lock.json  package.json
Project/backend/: .env  .gitignore  Dockerfile  package-lock.json  package.json  server.js
Project/mobile/: .env  Dockerfile  README.md  eslint.config.js  metro.config.js  package-lock.json  package.json  tsconfig.json
ai/chatbot/: app_features.csv  features.csv  main.py  pyproject.toml  requirements.txt  vector.py
ai/chatbot/chroma_langchain_db_shinycloth_features/: chroma.sqlite3
ai/chatbot/chrome_langchain_db_ShinyCloth_features/: chroma.sqlite3
backend/: .env  Dockerfile  Makefile  docker-compose.yml  package-lock.json  package.json  server.js  sonar-project.properties
backend/config/: chatSocket.js  clerk.js  cloudinaryProvider.js  cron.js  database.js
backend/controllers/: assistantController.js  cartsController.js  categoriesController.js  chatController.js  customersController.js  oderItemsController.js  orderStatusController.js  productsController.js  shipmentController.js  shippingAddressController.js  walletController.js  wishListController.js
backend/middleware/: authMiddleware.js  rateLimiter.js
backend/tests/: db.js  (+3 more)
mobile/: .env  aes.json  app.json  eas.json  package-lock.json  package.json
(+327 files in other folders)
