[project]
name = "test6"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.3.7",
    "fastapi>=0.124.4",
    "langchain-chroma>=1.1.0",
    "langchain-core>=1.2.1",
    "langchain-ollama>=1.0.1",
    "pandas>=2.3.3",
    "uvicorn>=0.38.0",
]
